--- a/css/en/main.scss
+++ b/css/en/main.scss
@@ -1,6 +1,7 @@
 $border: #EEEEEE;
 $gray: #cccccc;
 $darker: #777777;
+$darkest: #454545;
 $fontThicker: "Segoe UI Semibold", "Lao UI", serif;
 body {
   padding: 0;
@@ -30,6 +31,111 @@ body {
 
   .opac {
     opacity: 0.2;
+  }
+
+  section.home {
+    height: 100vh;
+    width: 100%;
+    background-color: #ce79d3;
+    background-image: url("../../img/girl.jpg");
+    background-size: cover;
+
+    .logo {
+      position: absolute;
+      margin: 10px 25px;
+      left: 0;
+      top: 0;
+
+      img {
+        width: 100px;
+      }
+    }
+
+    .navbar {
+      display: flex;
+      width: 100%;
+      justify-content: center;
+
+
+      .nav {
+        display: flex;
+        position: relative;
+        justify-content: center;
+        margin-left: 1.2em;
+
+        ul {
+          justify-self: center;
+          display: flex;
+          justify-content: center;
+          margin-block-start: 0;
+          margin-block-end: 0;
+          margin: 1.5em;
+          padding-inline-start: 0;
+          flex-wrap: wrap;
+          padding: 5px;
+          text-align: center;
+          list-style: none;
+          font-style: italic;
+          font-size: 1rem;
+          color: white;
+          font-family: "IRANSansWeb", "Microsoft JhengHei Light", serif;
+
+          li {
+            margin: 0 -5px;
+            padding: 0 25px;
+            border-radius: 20px;
+            cursor: pointer;
+
+            &:hover {
+              background-color: #3e3e46;
+            }
+          }
+        }
+      }
+    }
+
+    .description {
+      position: absolute;
+      width: 100%;
+      height: 150px;
+      bottom: 0;
+
+      .home-title {
+        color: white;
+        margin-left: 100px;
+
+        h1 {
+          width: 400px;
+          display: block;
+          border-bottom: 1px solid rgba(255, 255, 255, 0.51);
+          margin-block-start: 0;
+          margin-block-end: 0;
+          font-family: Lato;
+          font-weight: bolder;
+        }
+
+        h6 {
+          margin-block-start: 0;
+          margin-block-end: 0;
+          padding: 0;
+          font-family: "Lato Hairline";
+        }
+      }
+
+      .scroll {
+        position: absolute;
+        width: 50px;
+        height: 50px;
+        background-size: cover;
+        background-image: url("../../img/scroll.png");
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        bottom: 10px;
+        cursor: pointer;
+      }
+    }
   }
 
   .header {
@@ -766,150 +872,602 @@ body {
   }
 
   .footer {
-    background-color: #3e3e46;
+    background: #3e3e46 url("../../img/footer.jpg") no-repeat;
+    background-size: cover;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    overflow: hidden;
-    border-bottom: solid 3px $border;
+    flex-direction: column;
+    border-top: 8px solid #9f89c2;
 
-    .logo {
-      flex: 3 1 0;
+    .details {
       display: flex;
-      justify-content: center;
-      align-items: center;
+      width: 100%;
+      flex-wrap: wrap;
 
-      div {
-        width: 115px;
-        height: 115px;
+      .logo {
+        flex: 1 1 0;
         display: flex;
-        align-items: center;
         justify-content: center;
-        border: solid 15px #c3c3c8;
-        border-radius: 50%;
-        padding: 20px;
-        color: white;
-        margin: 120px 55px;
+        align-items: center;
 
-        span {
-          font-family: $fontThicker;
-          font-size: 1.2rem;
+        div {
+          width: 250px;
+          height: 250px;
+          display: flex;
           align-items: center;
-          vertical-align: middle;
+          justify-content: center;
+          padding: 20px;
+          color: white;
+
+          img {
+            width: 100%;
+          }
         }
       }
-    }
 
-    .site-map {
-      flex: 4 1 0;
-      display: flex;
-      flex-direction: column;
-
-      span {
-        color: white;
-        display: block;
-        padding: 50px 0 0 30px;
-        font-size: 2.1rem;
-        font-family: $fontThicker;
-      }
-
-      div {
+      .site-map {
+        flex: 1 1 0;
         display: flex;
-        flex-direction: row;
-      }
-
-      ul {
-        list-style: none;
-        display: flex;
-        flex-wrap: wrap;
-        padding: 5px 35px;
         flex-direction: column;
 
-        li {
-          width: 100%;
-          margin: 5px;
-          line-height: 1;
-          margin: 9px -5px;
-          white-space: nowrap;
-          font-size: 1.2rem;
+        span {
+          color: white;
+          display: block;
+          padding: 50px 0 0 30px;
+          font-size: 2.1rem;
+          font-family: $fontThicker;
+        }
 
-          a {
-            color: white;
-            text-decoration: none;
-            padding: 4px 10px;
-            border-radius: 15px;
+        .wrapper {
+          display: flex;
+          flex-direction: row;
 
-            &:hover {
-              border-radius: 15px;
-              background-color: $darker;
-            }
+          .left {
           }
 
+          .left, .right {
+            display: flex;
+            flex-direction: row;
+            flex: 1 0 0;
+
+            ul {
+              list-style: none;
+              display: flex;
+              flex-wrap: wrap;
+              padding: 5px 35px;
+              flex-direction: column;
+
+              li {
+                display: flex;
+                width: 100%;
+                line-height: 1;
+                margin: 9px -5px;
+                white-space: nowrap;
+                font-size: 1.2rem;
+
+                .item {
+                  display: flex;
+                  flex-direction: row;
+                  align-items: baseline;
+                  border-radius: 100px;
+                  background-color: white;
+                  transition: 0.2s ease-out;
+                  width: 21%;
+
+                  &:hover {
+                    width: 100%;
+                    border-radius: 50px;
+
+                    a {
+                      color: black;
+                    }
+                  }
+
+                  .arrow {
+                    width: 15px;
+                    background-color: white;
+                    padding: 10px;
+                    border-radius: 50px;
+
+                    img {
+                      width: 15px;
+                    }
+                  }
+
+                  a {
+                    color: white;
+                    text-decoration: none;
+                    border-radius: 15px;
+                    padding: 0 30px 0 20px;
+                    transition: 0.5s ease-out;
+                  }
+                }
+              }
+
+            }
+          }
+        }
+      }
+
+      .contact {
+        flex: 1 1 0;
+        display: flex;
+        flex-direction: column;
+
+        h2 {
+          padding: 20px 0 40px 50px;
+          font-size: 2.1rem;
+          color: white;
+          margin-block-end: 0;
+        }
+
+        div {
+          padding: 2px;
+
+          h5 {
+            font-size: 1rem;
+          }
+
+          h6 {
+            font-size: 0.7rem;
+          }
+
+          h5, h6 {
+            color: #fff;
+            margin-block-start: 0;
+            margin-block-end: 0;
+            padding: 4px 50px;
+          }
+        }
+
+      }
+
+      .newsletter {
+        flex: 1 1 0;
+        display: flex;
+        flex-direction: column;
+
+        h2 {
+          padding: 20px 0 0 50px;
+          font-size: 2.1rem;
+          color: white;
+          margin-block-end: 0;
+        }
+
+        .inp {
+          position: relative;
+          margin: 20px;
+          width: 80%;
+
+          .label {
+            position: absolute;
+            top: 16px;
+            left: 0;
+            font-size: 16px;
+            color: $gray;
+            font-weight: 500;
+            -webkit-transform-origin: 0 0;
+            transform-origin: 0 0;
+            transition: all 0.2s ease;
+          }
+
+          .border {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            height: 2px;
+            width: 100%;
+            -webkit-transform: scaleX(0);
+            transform: scaleX(0);
+            -webkit-transform-origin: 0 0;
+            transform-origin: 0 0;
+            transition: all 0.15s ease;
+          }
+
+          input {
+            -webkit-appearance: none;
+            width: 100%;
+            border: 0;
+            font-family: inherit;
+            padding: 12px 0;
+            height: 20px;
+            font-size: 16px;
+            font-weight: 500;
+            border-bottom: 2px solid #C8CCD4;
+            background: none;
+            border-radius: 0;
+            color: $gray;
+            transition: all 0.15s ease;
+
+            &:hover {
+              background: rgba(34, 50, 84, 0.03);
+            }
+
+            &:not(:placeholder-shown) + span {
+              -webkit-transform: translateY(-26px) scale(0.75);
+              transform: translateY(-26px) scale(0.75);
+            }
+
+            &:focus {
+              background: none;
+              outline: none;
+            }
+
+            &:focus + span {
+              -webkit-transform: translateY(-26px) scale(0.75);
+              transform: translateY(-26px) scale(0.75);
+            }
+
+
+            &:focus + span + .border {
+              -webkit-transform: scaleX(1);
+              transform: scaleX(1);
+            }
+
+
+          }
+
+
+        }
+
+        button {
+          background-color: white;
+          border-radius: 30px;
+          border-style: none;
+          width: 80px;
+          margin: 0 20px;
+          color: $darker;
+          padding: 10px 20px;
+        }
+
+      }
+    }
+
+    .social {
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+
+      .icons {
+        display: flex;
+        justify-content: space-around;
+        padding: 20px 100px;
+
+        a {
+          .icon {
+            width: 45px;
+            height: 45px;
+            margin: 10px;
+          }
+
+          #instagram {
+            background: url("../../img/insta.png") no-repeat;
+            background-size: cover;
+          }
+
+          #facebook {
+            background: url("../../img/fb.png") no-repeat;
+            background-size: cover;
+          }
+
+          #linkedin {
+            background: url("../../img/linkedin.png") no-repeat;
+            background-size: cover;
+          }
         }
       }
     }
 
-    .contact {
-      flex: 4 1 0;
+    .copyright {
+      flex: 1 1 0;
       display: flex;
-      flex-direction: column;
+      justify-content: flex-start;
 
-      h2 {
-        padding: 20px 0 0 50px;
-        font-size: 2.1rem;
-        color: white;
-        margin-block-end: 0;
+      h6 {
+        padding: 13px;
+        margin-block-end: 5px;
+        margin-block-start: 5px;
+        color: $gray;
+        width: 100%;
+        overflow: hidden;
+        font-family: "Lato Hairline";
+
+        b {
+          color: white !important;
+        }
       }
 
-      div {
-        padding: 2px;
+      h6:after {
+        content: "";
+        display: inline-block;
+        height: 3px;
+        border-radius: 50px;
+        position: relative;
+        vertical-align: middle;
+        width: 100%;
+        background-color: $gray;
+      }
 
-        h5 {
-          font-size: 1.2rem;
+      h6:after {
+        left: 0.5em;
+        margin-right: -50%;
+      }
+    }
+  }
+
+
+  .gooddesign {
+    display: flex;
+    background-image: url("../../img/cubblestone.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    flex-direction: column;
+
+    * {
+      margin-block-start: 0;
+      margin-block-end: 0;
+    }
+
+    .description {
+      display: flex;
+      flex-direction: row-reverse;
+      width: 100%;
+
+      .text-wrapper {
+        width: 50%;
+        padding: 80px 0;
+
+        h1 {
+          padding: 10px 50px;
+          font-size: 3.5rem;
+          font-weight: bolder;
         }
 
         h6 {
+          padding: 20px 50px;
+          line-height: 2;
+        }
+
+        .readmore {
+          display: flex;
+          align-items: center;
+          padding: 20px 50px;
+          color: $darkest;
+          cursor: pointer;
+
+          img {
+            padding: 20px;
+            background-color: #3e3e46;
+            width: 20px;
+            border-radius: 50px;
+          }
+
+          h4 {
+            align-items: center;
+            padding: 0 20px;
+          }
+        }
+      }
+    }
+
+    .titles {
+      display: flex;
+      width: 100%;
+
+      ul {
+        width: 100%;
+        display: flex;
+        justify-content: space-around;
+      }
+
+      li {
+        list-style: none;
+        padding: 15px;
+        //transition: 0.8s ease-in;
+
+
+        a {
+          color: black;
+          text-decoration: none;
+          padding: 5px;
+
+          &:hover {
+            border-bottom: 1px solid $darker;
+            font-weight: bold;
+          }
+        }
+      }
+    }
+  }
+
+  .collection {
+    display: flex;
+    background-image: url("../../img/plate.png");
+    background-position: right -200px center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    flex-direction: column;
+    border-bottom: 1px solid $gray;
+
+    * {
+      margin-block-start: 0;
+      margin-block-end: 0;
+    }
+
+    .description {
+      display: flex;
+      width: 100%;
+
+      .text-wrapper {
+        width: 50%;
+        padding: 80px 0;
+
+        h1 {
+          padding: 10px 80px;
+          font-size: 7rem;
+          font-weight: bolder;
+        }
+
+        h6 {
+          padding: 0 100px;
+          font-size: 0.8rem;
+          color: $darker;
+          line-height: 1.8;
+        }
+
+        .readmore {
+          display: flex;
+          align-items: center;
+          padding: 50px 100px;
+          color: $darkest;
+          cursor: pointer;
+
+          img {
+            padding: 20px;
+            background-color: #3e3e46;
+            width: 20px;
+            border-radius: 50px;
+          }
+
+          h4 {
+            align-items: center;
+            padding: 0 20px;
+          }
+        }
+      }
+    }
+  }
+
+  .features {
+    display: flex;
+    padding: 120px 20px;
+
+    .picture {
+      flex: 3 0 0;
+      position: relative;
+
+      div {
+        position: absolute;
+        width: 330px;
+        height: 330px;
+        margin: auto;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        border-radius: 40px;
+      }
+
+      #one {
+        background-color: #0fbbbf;
+        transform: rotate(20deg);
+        width: 300px !important;
+        height: 300px !important;
+      }
+
+      #two {
+        background-color: #201f27;
+        transform: rotate(-20deg);
+      }
+
+      #three {
+        background: url("../../img/port.jpg");
+        transition: 0.2s ease-in;
+
+        &:hover {
+          transform: rotate(-2deg);
+          box-shadow: 4px 0 3px -2px;
+        }
+      }
+
+
+    }
+
+    .description {
+      flex: 5 0 0;
+
+      ul {
+        display: flex;
+
+        li {
+          list-style: none;
+          margin-right: 100px;
+
+          a {
+            text-decoration: none;
+            padding: 3px 0;
+
+            &:hover {
+              border-bottom: 4px solid #9f89c2;
+            }
+          }
+        }
+      }
+
+      h5 {
+        padding: 0 40px;
+        margin-block-end: 0.5em;
+        line-height: 1.5;
+        font-family: "Lato Hairline";
+      }
+
+      .readmore {
+        display: flex;
+        align-items: center;
+        padding: 0 40px;
+        color: $darkest;
+        cursor: pointer;
+
+        img {
+          padding: 15px;
+          background-color: #3e3e46;
+          width: 20px;
+          border-radius: 50px;
+        }
+
+        h4 {
+          align-items: center;
+          padding: 0 10px;
           font-size: 1rem;
         }
-
-        h5, h6 {
-          color: #fff;
-          margin-block-start: 0;
-          margin-block-end: 0;
-          padding: 4px 50px;
-        }
       }
 
-      .c-logo {
-        display: flex;
-        flex-direction: row-reverse;
-        margin-right: 18%;
-
-        div {
-          width: 3px;
-          height: 3px;
-          margin: 15px 12px;
-          border-radius: 50%;
-          border: 17px solid $border;
-        }
-      }
     }
   }
 
-  .copyright {
-    flex: 1 1 0;
+  .ourcustomers {
     display: flex;
-    justify-content: center;
-    background-color: #3e3e46;
+    flex-direction: column;
+    background-color: $darkest;
 
-    h6 {
-      font-family: $fontThicker;
-      padding: 13px;
-      margin-block-end: 5px;
-      margin-block-start: 5px;
+    h1 {
+      font-style: italic;
+      font-size: 4.5rem;
+      font-weight: bolder;
+      font-family: "Lao UI", serif;
+      text-align: center;
+      margin-block-end: 1rem;
       color: white;
     }
+
+    .logos {
+      display: flex;
+      justify-content: center;
+
+      .item {
+        margin: 30px;
+        width: 200px;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
+
   }
+
 }
 
 @media all and (max-width: 1280px) {
@@ -950,6 +1508,47 @@ body {
 
 @media all and (max-width: 980px) {
   .container {
+    section.home {
+      .logo {
+        img {
+          width: 90px;
+        }
+      }
+
+      .navbar {
+        .nav {
+          margin-top: 1em;
+
+          ul {
+            margin: 1em;
+            background-color: #9f89c2;
+            font-size: 0.8rem;
+          }
+        }
+      }
+
+      .description {
+        .home-title {
+          margin-left: 80px;
+
+          h1 {
+            width: 350px;
+            font-size: 2.2rem;
+          }
+
+          h6 {
+            font-size: 1rem;
+          }
+        }
+
+        .scroll {
+          width: 40px;
+          height: 40px;
+        }
+      }
+
+    }
+
 
     .fsymbol {
       font-size: 20rem;
@@ -1033,6 +1632,51 @@ body {
 
 @media all and (max-width: 736px) {
   .container {
+
+    section.home {
+      .logo {
+        margin: 15px 25px;
+
+        img {
+          width: 80px;
+        }
+      }
+
+      .navbar {
+        .nav {
+          margin-top: 1em;
+          width: 60%;
+
+          ul {
+            margin: 1em;
+            background-color: #9f89c2;
+            font-size: 0.6rem;
+          }
+        }
+      }
+
+      .description {
+        height: 100px;
+        .home-title {
+          margin-left: 20px;
+
+          h1 {
+            width: 300px;
+            font-size: 1.5rem;
+          }
+
+          h6 {
+            font-size: 0.6rem;
+          }
+        }
+
+        .scroll {
+          width: 30px;
+          height: 30px;
+        }
+      }
+    }
+
     .fsymbol {
       font-size: 15rem;
     }
@@ -1097,6 +1741,52 @@ body {
 
 @media all and (max-width: 480px) {
   .container {
+
+    section.home {
+      .logo {
+        margin: 5px 15px;
+
+        img {
+          width: 40px;
+        }
+      }
+
+      .navbar {
+        .nav {
+          margin-top: 0.5em;
+          width: 60%;
+
+          ul {
+            margin: 0.8em;
+            font-size: 0.3rem;
+          }
+        }
+      }
+
+      .description {
+        height: 50px;
+
+        .home-title {
+          margin-left: 15px;
+
+          h1 {
+            width: 150px;
+            font-size: 1rem;
+          }
+
+          h6 {
+            font-size: 0.3rem;
+          }
+        }
+
+        .scroll {
+          width: 10px;
+          height: 10px;
+        }
+      }
+    }
+
+
     .fsymbol {
       display: none;
     }
