--- a/css/fa/main.scss
+++ b/css/fa/main.scss
@@ -39,6 +39,10 @@ h1, h2, h3, h4, h5, h6, span, a, li {
     font-size: 30rem;
   }
 
+  .opac {
+    opacity: 0.2;
+  }
+
   .header {
     z-index: 6;
     position: relative;
@@ -116,6 +120,85 @@ h1, h2, h3, h4, h5, h6, span, a, li {
         }
       }
     }
+  }
+
+  .hover {
+    color: #c28fb8 !important;
+  }
+
+  .transparent {
+    background-color: rgba(204, 204, 204, 0.34);
+  }
+
+  .half-slider {
+    display: flex;
+    flex: 1 1 auto;
+    z-index: 6;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(204, 204, 204, 0.34);
+    position: relative;
+    flex-wrap: wrap;
+
+    .hs-wrapper {
+      flex: 4 1 0;
+      height: 700px;
+      background: url("../../img/comp.jpg") no-repeat center;
+      background-size: cover;
+      width: 100%;
+
+      .indicator {
+        position: absolute;
+        display: flex;
+        left: 10px;
+        bottom: 20px;
+        flex-direction: column;
+
+        .sl {
+          width: 10px;
+          height: 25px;
+          background-color: $gray;
+          border-radius: 50px;
+          margin: 4px 10px;
+          cursor: pointer;
+
+          &:hover {
+            background-color: $darker;
+          }
+        }
+
+        .nsl {
+          width: 10px;
+          margin: 5px 10px;
+          height: 75px;
+          background-color: $darker;
+          border-radius: 50px;
+        }
+
+      }
+    }
+
+    .hstext-wrapper {
+      flex: 3 1 0;
+      color: $darker;
+
+      h1 {
+        padding: 10% 10% 0 10%;
+        font-size: 5rem;
+        margin-block-start: 0;
+        margin-block-end: 0;
+      }
+
+      h6 {
+        padding: 0 10% 10% 10%;
+        margin-block-start: 0;
+        margin-block-end: 0;
+        font-size: 1.5rem;
+        line-height: 1.8;
+      }
+    }
+
+
   }
 
   .portrait {
@@ -217,6 +300,13 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   }
 
   .categories {
+    .nonitalic {
+      margin-top: 30px !important;
+      font-style: normal !important;
+      color: white !important;
+
+    }
+
     &::before {
       content: "";
       position: absolute;
@@ -259,7 +349,8 @@ h1, h2, h3, h4, h5, h6, span, a, li {
       background-color: $darker;
       content: "";
       display: inline-block;
-      height: 2px;
+      height: 3px;
+      border-radius: 50px;
       position: relative;
       vertical-align: middle;
       width: 40%;
@@ -415,8 +506,63 @@ h1, h2, h3, h4, h5, h6, span, a, li {
     }
   }
 
+  .marginbackground {
+    margin: 0;
+    background-image: url("../../img/abdrobad.jpeg");
+    background-size: cover;
+    background-color: rgba(0, 0, 0, 0.56);
+    background-blend-mode: multiply;
+    padding: 0;
+
+    h5 {
+      color: $border;
+      text-align: center;
+      padding: 20px 12%;
+      line-height: 2;
+    }
+  }
+
   .noback {
     background: none;
+  }
+
+  .photo-gallery {
+    display: flex;
+    flex: 1 1 auto;
+    width: 100%;
+    flex-direction: column;
+
+    .fluid {
+      width: 100%;
+      height: 500px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+
+    .thumbnail {
+      display: flex;
+      //flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: space-around;
+      flex-wrap: wrap;
+
+      .item {
+        background-color: #ce79d3;
+        flex: 1 1 0;
+        height: 200px;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+    }
+
   }
 
   .services {
@@ -479,6 +625,159 @@ h1, h2, h3, h4, h5, h6, span, a, li {
         height: 200px;
         margin: 20px;
       }
+    }
+  }
+
+  .sponsorship {
+    .title {
+      margin-top: 20px;
+      padding: 40px 20px;
+      overflow: hidden;
+      text-align: right;
+      color: $darker;
+      font-style: italic;
+      font-size: 2rem;
+    }
+
+    .title:after {
+      content: "";
+      display: inline-block;
+      height: 3px;
+      border-radius: 50px;
+      position: relative;
+      vertical-align: middle;
+      width: 100%;
+      background-color: $border;
+    }
+
+    .title:after {
+      right: 0.5em;
+      margin-left: -50%;
+    }
+
+    .row {
+      display: flex;
+      flex: 1 1 0;
+
+      .text-wrapper {
+        display: flex;
+        flex: 4 1 0;
+        padding: 40px;
+      }
+
+      .image-wrapper {
+        display: flex;
+        flex: 3 1 0;
+        padding: 20px 20px 0 20px;
+        max-height: 300px;
+
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+
+      }
+
+
+    }
+
+  }
+
+  .description {
+    .title {
+      margin-top: 100px;
+      overflow: hidden;
+      text-align: center;
+      color: $darker;
+      font-style: italic;
+      font-size: 2rem;
+    }
+
+    .title:before,
+    .title:after {
+      content: "";
+      display: inline-block;
+      height: 3px;
+      border-radius: 50px;
+      position: relative;
+      vertical-align: middle;
+      width: 38%;
+      background-color: $border;
+    }
+
+    .title:before {
+      right: 0.5em;
+      margin-left: -50%;
+    }
+
+    .title:after {
+      left: 0.5em;
+      margin-right: -50%;
+    }
+
+    h5 {
+      padding: 5%;
+      line-height: 2;
+    }
+  }
+
+  .info {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+
+    .text-wrapper {
+      flex: 1 1 auto;
+
+      .title {
+        padding: 0 40px;
+        overflow: hidden;
+        text-align: right;
+        color: $darker;
+        font-style: italic;
+        font-size: 2rem;
+      }
+
+      .title:after {
+        content: "";
+        display: inline-block;
+        height: 3px;
+        border-radius: 50px;
+        position: relative;
+        vertical-align: middle;
+        width: 100%;
+        background-color: $border;
+      }
+
+      .title:after {
+        right: 0.5em;
+        margin-left: -50%;
+      }
+
+      .details {
+        padding: 40px;
+
+        h5, h6 {
+          margin-block-start: 0;
+          margin-block-end: 0;
+          padding: 10px;
+        }
+
+        h6 {
+          color: $darker;
+        }
+      }
+
+
+    }
+
+    .map-wrapper {
+      flex: 3 1 auto;
+      background: url("../../img/photo galley (8).jpg") no-repeat;
+      background-size: cover;
+      margin: 25px;
+      height: 500px;
     }
   }
 
@@ -642,7 +941,27 @@ h1, h2, h3, h4, h5, h6, span, a, li {
         width: 40vw;
       }
     }
+
+    .half-slider {
+      .hstext-wrapper {
+        flex: 2 1 50%;
+
+        h1 {
+          font-size: 4rem;
+        }
+
+        h6 {
+          font-size: 1.2rem;
+        }
+      }
+
+      .hs-wrapper {
+        flex: 2 1 50%;
+      }
+    }
   }
+
+
 }
 
 @media all and (max-width: 980px) {
@@ -698,6 +1017,33 @@ h1, h2, h3, h4, h5, h6, span, a, li {
       }
     }
 
+    .half-slider {
+      text-align: center;
+
+      .hstext-wrapper {
+        flex: 1 1 auto;
+
+        h1 {
+          font-size: 4rem;
+        }
+
+        h6 {
+          font-size: 1.2rem;
+        }
+      }
+
+      .hs-wrapper {
+        flex: 1 1 auto;
+        background-position-y: -100px;
+        height: 500px;
+      }
+    }
+
+    .info {
+      .map-wrapper {
+        width: 100%;
+      }
+    }
   }
 }
 
@@ -751,6 +1097,18 @@ h1, h2, h3, h4, h5, h6, span, a, li {
       }
     }
 
+    .half-slider {
+      .hs-wrapper {
+        height: 400px;
+      }
+    }
+
+    .sponsorship {
+      .row {
+        flex-direction: column-reverse;
+      }
+    }
+
   }
 }
 
@@ -785,6 +1143,12 @@ h1, h2, h3, h4, h5, h6, span, a, li {
         font-size: 2.5rem;
         text-align: center;
         padding: 5px;
+      }
+    }
+
+    .half-slider {
+      .hs-wrapper {
+        height: 200px;
       }
     }
 
