--- a/css/en/main.scss
+++ b/css/en/main.scss
@@ -1254,11 +1254,13 @@ body {
     .titles {
       display: flex;
       width: 100%;
+      justify-content: center;
 
       ul {
         width: 100%;
         display: flex;
         justify-content: space-around;
+        flex-wrap: wrap;
       }
 
       li {
@@ -1472,6 +1474,43 @@ body {
 
 @media all and (max-width: 1280px) {
   .container {
+
+    .gooddesign {
+      .description {
+        .text-wrapper {
+          width: 60%;
+
+          h1 {
+            font-size: 3.4rem;
+
+          }
+
+          h6 {
+            padding: 10px 50px;
+            font-size: 1rem;
+          }
+
+          .readmore {
+            padding: 10px 50px;
+
+            img {
+              padding: 20px;
+              width: 20px;
+            }
+
+            h4 {
+              font-size: 1.6rem;
+            }
+          }
+        }
+      }
+
+      .titles {
+        width: 60%;
+        margin: auto;
+      }
+    }
+
     .portrait, .portrait2 {
       h2 {
         font-size: 4rem;
@@ -1501,6 +1540,10 @@ body {
         flex: 2 1 50%;
       }
     }
+
+    .collection {
+      background-size: 600px;
+    }
   }
 
 
@@ -1521,7 +1564,6 @@ body {
 
           ul {
             margin: 1em;
-            background-color: #9f89c2;
             font-size: 0.8rem;
           }
         }
@@ -1549,6 +1591,21 @@ body {
 
     }
 
+    .collection {
+      background-size: 600px;
+
+      .description {
+        .text-wrapper {
+          h1 {
+            font-size: 4.5rem;
+          }
+
+          .readmore {
+            padding: 50px 70px;
+          }
+        }
+      }
+    }
 
     .fsymbol {
       font-size: 20rem;
@@ -1627,6 +1684,46 @@ body {
         width: 100%;
       }
     }
+
+    .gooddesign {
+      .description {
+        .text-wrapper {
+          width: 60%;
+
+          h1 {
+            font-size: 2.4rem;
+          }
+
+          h6 {
+            padding: 10px 50px;
+            font-size: 0.8rem;
+          }
+
+          .readmore {
+            img {
+              padding: 12px;
+              width: 12px;
+            }
+
+            h4 {
+              font-size: 1rem;
+            }
+          }
+        }
+      }
+
+      .titles {
+        width: 100%;
+        margin: auto;
+
+        ul {
+          li {
+            font-size: 1.2rem;
+            padding: 20px 5px;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -1649,7 +1746,6 @@ body {
 
           ul {
             margin: 1em;
-            background-color: #9f89c2;
             font-size: 0.6rem;
           }
         }
@@ -1657,6 +1753,7 @@ body {
 
       .description {
         height: 100px;
+
         .home-title {
           margin-left: 20px;
 
@@ -1697,7 +1794,6 @@ body {
       }
     }
 
-
     .portrait, .portrait2 {
       height: 80vh;
 
@@ -1736,6 +1832,68 @@ body {
       }
     }
 
+    .collection {
+      background-size: 350px;
+      background-position: right -160px center;
+
+      .description {
+        .text-wrapper {
+          padding: 20px 0;
+
+          h1 {
+            padding: 10px 30px 0 30px;
+            font-size: 3.5rem;
+          }
+
+          h6 {
+            padding: 0 0 0 35px;
+            font-size: 0.6rem;
+          }
+
+          .readmore {
+            padding: 50px 0 50px 30px;
+
+            img {
+              width: 10px;
+              padding: 12px;
+            }
+
+            h4 {
+              font-size: 1rem;
+            }
+          }
+        }
+      }
+    }
+
+    .gooddesign {
+      .description {
+        .text-wrapper {
+          width: 75%;
+          padding: 60px 0;
+
+          h1 {
+            font-size: 2rem;
+          }
+
+          h6 {
+            font-size: 0.5rem;
+          }
+
+          .readmore {
+            img {
+              width: 8px;
+              height: 8px;
+              padding: 8px;
+            }
+
+            h4 {
+              font-size: 0.8rem;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
@@ -1786,7 +1944,6 @@ body {
       }
     }
 
-
     .fsymbol {
       display: none;
     }
@@ -1825,6 +1982,80 @@ body {
       }
     }
 
+    .gooddesign {
+      .description {
+        .text-wrapper {
+          width: 75%;
+          padding: 30px 0;
+
+          h1 {
+            font-size: 0.8rem;
+            padding: 0 0 0 48px;
+          }
+
+          h6 {
+            padding: 0 10px 0 48px;
+            font-size: 0.3rem;
+          }
+
+          .readmore {
+            img {
+              width: 5px;
+              height: 5px;
+              padding: 4px;
+            }
+
+            h4 {
+              font-size: 0.5rem;
+              padding: 0 10px;
+            }
+          }
+        }
+      }
+
+      .titles {
+        ul {
+          li {
+            font-size: 0.8rem;
+          }
+        }
+      }
+    }
+
+    .collection {
+      background-size: 180px;
+      background-position: right -100px center;
+
+      .description {
+        .text-wrapper {
+          padding: 20px 0;
+
+          h1 {
+            padding: 10px 30px 0 30px;
+            font-size: 1.5rem;
+          }
+
+          h6 {
+            padding: 0 0 0 35px;
+            font-size: 0.3rem;
+          }
+
+          .readmore {
+            padding: 20px 0 20px 30px;
+
+            img {
+              width: 5px;
+              padding: 4px;
+            }
+
+            h4 {
+              padding: 0 10px;
+              font-size: 0.4rem;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
